# mmdeploy

configs/mmocr/text-detection/: text-detection_openvino_dynamic-640x640.py
csrc/mmdeploy/net/openvino/: CMakeLists.txt  openvino_net.h
mmdeploy/apis/openvino/: __init__.py  utils.py
mmdeploy/backend/openvino/: __init__.py  backend_manager.py  onnx2openvino.py  utils.py  wrapper.py
